tests/invalid-use/use_dependant_ref_after_drop.stderr
error[E0505]: cannot move out of `data` because it is borrowed
  --> $DIR/use_dependant_ref_after_drop.rs:10:21
   |
9  |       let dependant_ref = data.dependant::<MyStruct>();
   |                           ---- borrow of `data` occurs here
10 |       core::mem::drop(data);
   |                       ^^^^ move out of `data` occurs here
11 | /     assert_eq!(
12 | |         dependant_ref,
13 | |         &MyStruct(&[1, 2, 3])
14 | |     )
   | |_____- borrow later used here
